// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Long number component should render bigger than 100 1`] = `
<span
  className="bubble--medium colour-sea-blue"
>
  99+
</span>
`;

exports[`Long number component should render different size and colour 1`] = `
<span
  className="bubble--large colour-light-grey"
>
  99+
</span>
`;

exports[`Long number component should render with defaults 1`] = `
<span
  className="bubble--medium colour-sea-blue"
>
  10
</span>
`;
